[package]
name = "virtual_view"
version = "0.2.1"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["virtual", "view", "diff", "ui"]
categories = ["gui"]

description = "a virtual view diff in rust"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-virtual_view.git"
homepage = "https://gitlab.com/nathanfaucett/rs-virtual_view"

[lib]
name = "virtual_view"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
fnv = "1.0"

[dev-dependencies]
